Use custom msg interface

--- a/src/custom_interfaces/CMakeLists.txt
+++ b/src/custom_interfaces/CMakeLists.txt
@@ -18,9 +18,7 @@ if(BUILD_TESTING)
   find_package(rosidl_default_generators REQUIRED)
 
   rosidl_generate_interfaces(${PROJECT_NAME}
-    "msg/Num.msg"
-    "msg/Sphere.msg"
-    "srv/AddThreeInts.srv"
+    "msg/Sensor3DOF.msg"
     "srv/Sensor3DOF.srv"
     DEPENDENCIES geometry_msgs # Add packages that above messages depend on, in this case geometry_msgs for Sphere.msg
   )
